update according to feedback

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -127,10 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "19c56015",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sarah\\Documents\\argilla\\src\\argilla\\client\\client.py:154: UserWarning: Default user was detected and no workspace configuration was provided, so the default 'argilla' workspace will be used. If you want to setup another workspace, use the `rg.set_workspace` function or provide a different one on `rg.init`\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import argilla as rg\n",
     "rg.init(api_url=api_url, api_key=api_key)\n",
@@ -166,7 +175,7 @@
    "id": "423d6483",
    "metadata": {},
    "source": [
-    "## Create Dataset\n",
+    "## Create a Dataset\n",
     "\n",
     "FeedbackDataset is the container for Argilla Feedback structure. Argilla Feedback offers different components for FeedbackDatasets that you can employ for various aspects of your workflow. For a more detailed explanation, refer to the [documentation](https://docs.argilla.io/en/latest/practical_guides/practical_guides.html) and the [end-to-end tutorials](https://docs.argilla.io/en/latest/tutorials_and_integrations/tutorials/tutorials.html) for beginners.\n",
     "\n",
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "96b161c4",
    "metadata": {},
    "outputs": [
@@ -194,20 +203,20 @@
       "text/plain": [
        "FeedbackDataset(\n",
        "   fields=[TextField(name='text', title='Text', required=True, type='text', use_markdown=True)]\n",
-       "   questions=[LabelQuestion(name='label', title='Label', description='Classify the text by selecting the correct label from the given list of labels.', required=True, type='label_selection', labels=['yes', 'no'], visible_labels=None)]\n",
+       "   questions=[LabelQuestion(name='label', title='Label', description='Classify the text by selecting the correct label from the given list of labels.', required=True, type='label_selection', labels=['joy', 'sadness'], visible_labels=None)]\n",
        "   guidelines=This is a text classification dataset that contains texts and labels. Given a set of texts and a predefined set of labels, the goal of text classification is to assign one label to each text based on its content. Please classify the texts by making the correct selection.)\n",
        "   metadata_properties=[])\n",
        ")"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset = rg.FeedbackDataset.for_text_classification(\n",
-    "    labels=[\"yes\", \"no\"],\n",
+    "    labels=[\"joy\", \"sadness\"],\n",
     "    multi_label=False,\n",
     "    use_markdown=True,\n",
     "    guidelines=None,\n",
@@ -219,308 +228,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2847830f",
+   "id": "4f9ca558",
    "metadata": {},
    "source": [
-    "### Configure a Custom Dataset\n",
-    "\n",
-    "If your dataset does not fit into one of the pre-defined templates, you [can create a custom dataset](https://docs.argilla.io/en/latest/practical_guides/create_update_dataset/create_dataset.html#define-questions) by defining the fields, questions, records, metadata properties and vectors settings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a62b35ba",
-   "metadata": {},
-   "source": [
-    "#### Fields\n",
-    "\n",
-    "In our example, `fields` will store the question and answer structure to be used for each sample. It has the following arguments: `name`, `title` (optional), `required` (optional) and `use_markdown` (optional)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "94ecaf52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fields = [\n",
-    "    rg.TextField(name=\"question\", title=\"Question\", required=True, use_markdown=False),\n",
-    "    rg.TextField(name=\"answer\",title=\"Answer\", required=True, use_markdown=True)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e4abff4",
-   "metadata": {},
-   "source": [
-    "#### Questions\n",
-    "\n",
-    "For the dataset, you need to define at least one question type. As of today, the different question types that Argilla offers are `RatingQuestion`, `TextQuestion`, `LabelQuestion`, `MultiLabelQuestion` and `RankingQuestion`.\n",
-    "\n",
-    "Let's create a `LabelQuestion` for the current example with its `name`, `title` seen on Argilla UI, and the dictionary with the `labels`. It will be `required` and the number of `visible_labels` in the UI is the default (20)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6c5441dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_question = [\n",
-    "    rg.LabelQuestion(\n",
-    "        name=\"relevant\",\n",
-    "        title=\"Relevancy\",\n",
-    "        labels=[\"yes\", \"no\"],\n",
-    "        required=True,\n",
-    "        visible_labels=None\n",
-    "    )\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5ce5618",
-   "metadata": {},
-   "source": [
-    "#### Metadata Properties\n",
-    "\n",
-    "Metadata can optionally be added to the dataset to filter and sort the records. They can be of the following types: `TermsMetadataProperty`, `IntegerMetadataProperty` or `FloatMetadataProperty`.\n",
-    "\n",
-    "Let's add a `TermsMetadataProperty` to the dataset with the `name`, `title` and `values` (optional) to be used for filtering and sorting."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6659349a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata_properties = [\n",
-    "    rg.TermsMetadataProperty(\n",
-    "        name=\"groups\",\n",
-    "        title=\"Annotation groups\",\n",
-    "        values=[\"group-a\", \"group-b\", \"group-c\"]\n",
-    "    )\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ecb9f573",
-   "metadata": {},
-   "source": [
-    "#### Vectors Settings\n",
-    "\n",
-    "Vectors can optionally be added to use  similarity search. You'll need to specify the `name`, `title` (optional) and `dimensions` of the vector."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "0b68578c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectors_settings = [\n",
-    "    rg.VectorSettings(\n",
-    "        name=\"my_vector\",\n",
-    "        dimensions= 5 # e.g. 768 for BERT\n",
-    "    )\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b962aeee",
-   "metadata": {},
-   "source": [
-    "### Annotation guideline\n",
-    "\n",
-    "As it is helpful for annotators, we can enrich our task with `guidelines` as well. Clear guidelines will help them to understand the task better and make more accurate annotations. There are two ways to have guidelines: defining it as an argument to the FeedbackDataset or as an argument (`description`) to the question instances above. Depending on the specific task you employ, you may want to use either one of them, so it is good practice to try both."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad257b4a",
-   "metadata": {},
-   "source": [
-    "#### Create the Dataset\n",
-    "\n",
-    "We can now create our FeedbackDataset instance with the features defined above. Do not forget to define `fields`, `questions`, `metadata_properties` and `vectors_settings` as a list, while `guidelines` expects a string."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ec92cdf5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FeedbackDataset(\n",
-       "   fields=[TextField(name='question', title='Question', required=True, type='text', use_markdown=False), TextField(name='answer', title='Answer', required=True, type='text', use_markdown=True)]\n",
-       "   questions=[LabelQuestion(name='relevant', title='Relevancy', description=None, required=True, type='label_selection', labels=['yes', 'no'], visible_labels=None)]\n",
-       "   guidelines=Annotations should be made according to the policy.)\n",
-       "   metadata_properties=[TermsMetadataProperty(name='groups', title='Annotation groups', visible_for_annotators=True, type='terms', values=['group-a', 'group-b', 'group-c'])])\n",
-       ")"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset = rg.FeedbackDataset(\n",
-    "    guidelines=\"Annotations should be made according to the policy.\",\n",
-    "    fields=fields,\n",
-    "    questions=label_question,\n",
-    "    metadata_properties=metadata_properties,\n",
-    "    vectors_settings=vectors_settings\n",
-    ")\n",
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b099e23",
-   "metadata": {},
-   "source": [
-    "## Upload data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "deb37de2",
-   "metadata": {},
-   "source": [
-    "### Records\n",
-    "\n",
-    "A record refers to each of the data items that will be annotated by the annotator team. The records will be the pieces of information that will be shown to the user in the UI in order to complete the annotation task. In the current single-label dataset sample, it can only consist of a text to be labeled while it will be a prompt and output pair in the case of instruction datasets.\n",
-    "\n",
-    "For Argilla Feedback, we can define a `FeedbackRecord` with the mandatory argument `fields` and optional arguments `metadata` and `vectors`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "36b9b719",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A sample FeedbackRecord\n",
-    "record = rg.FeedbackRecord(\n",
-    "    fields={\n",
-    "        \"question\": \"Why can camels survive long without water?\",\n",
-    "        \"answer\": \"Camels use the fat in their humps to keep them filled with energy and hydration for long periods of time.\"\n",
-    "    },\n",
-    "    metadata={\"groups\": \"group-a\"},\n",
-    "    vectors={\"my_vector\": [0.1, 0.2, 0.3, 0.4, 0.5]}\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "850c8a0e",
-   "metadata": {},
-   "source": [
-    "### Suggestions\n",
-    "\n",
-    "Argilla Feedback offers a way to use suggestions from LLMs and other models as a starting point for annotators. This way, annotators can save time and effort by correcting the predictions instead of annotating from scratch. They can also be added directly in `FeedbackRecords` as `suggestions`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "fce6c2d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "record.suggestions=[\n",
-    "        {\n",
-    "        \"question_name\": \"relevant\",\n",
-    "        \"value\": \"yes\"\n",
-    "        }\n",
-    "    ]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9febcaa9",
-   "metadata": {},
-   "source": [
-    "### Responses\n",
-    "\n",
-    "Argilla Feedback can deal with multiple responses per record for each one of the annotators. We can define a list of responses for each record. Each response will be a dictionary with the annotator's name as the key and the response as the value. They can also be added directly in `FeedbackRecords` as `responses`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "230ad6cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "record.responses = [\n",
-    "    {\n",
-    "        \"values\":{\n",
-    "            \"relevant\":{\n",
-    "                \"value\": \"yes\"\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1599a179",
-   "metadata": {},
-   "source": [
-    "#### Add the Records"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53af531a",
-   "metadata": {},
-   "source": [
-    "Now, it is quite simple to add records to the FeedbackDataset we have previously created, in the form of a list."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d2a8bfa0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FeedbackRecord(fields={'question': 'Why can camels survive long without water?', 'answer': 'Camels use the fat in their humps to keep them filled with energy and hydration for long periods of time.'}, metadata={'groups': 'group-a'}, vectors={'my_vector': [0.1, 0.2, 0.3, 0.4, 0.5]}, responses=[ResponseSchema(user_id=None, values={'relevant': ValueSchema(value='yes')}, status=<ResponseStatus.submitted: 'submitted'>)], suggestions=(SuggestionSchema(question_name='relevant', type=None, score=None, value='yes', agent=None),), external_id=None)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.add_records([record])\n",
-    "dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ad19311",
-   "metadata": {},
-   "source": [
-    "Now that we have our dataset with already annotated responses and suggestions as model predictions, we can push the dataset to the Argilla space.\n",
+    "Now that we have our dataset, we can push the dataset to the Argilla space.\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
@@ -534,14 +245,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfb8b36",
+   "id": "dc956805",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    remote_dataset = dataset.push_to_argilla(name=\"relevancy_dataset\", workspace=\"argilla\")\n",
-    "except:\n",
-    "    pass"
+    "dataset.push_to_argilla(name=\"my-first-dataset\", workspace=\"argilla\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2847830f",
+   "metadata": {},
+   "source": [
+    "### Configure a Custom Dataset\n",
+    "\n",
+    "If your dataset does not fit into one of the pre-defined templates, you [can create a custom dataset](https://docs.argilla.io/en/latest/practical_guides/create_update_dataset/create_dataset.html#define-questions) by defining the fields, the different question types, the metadata properties and the vectors settings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b099e23",
+   "metadata": {},
+   "source": [
+    "## Add the Records\n",
+    "\n",
+    "A record refers to each of the data items that will be annotated by the annotator team. The records will be the pieces of information that will be shown to the user in the UI in order to complete the annotation task. In the current dataset sample, it can only consist of a text to be labeled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "36b9b719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = [\n",
+    "    rg.FeedbackRecord(\n",
+    "        fields={\n",
+    "            \"text\": \"I am so happy today\",\n",
+    "        },\n",
+    "    ),\n",
+    "    rg.FeedbackRecord(\n",
+    "        fields={\n",
+    "            \"text\": \"I feel sad today\",\n",
+    "        },\n",
+    "    )\n",
+    "]\n",
+    "dataset.add_records(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "df7d2540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[FeedbackRecord(fields={'text': 'I am so happy today'}, metadata={}, vectors={}, responses=[], suggestions=(), external_id=None),\n",
+       " FeedbackRecord(fields={'text': 'I feel sad today'}, metadata={}, vectors={}, responses=[], suggestions=(), external_id=None)]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.records"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "850c8a0e",
+   "metadata": {},
+   "source": [
+    "Argilla also offers a way to use suggestions and responses from other models as a starting point for annotators. This way, annotators can save time and effort by correcting the predictions or answers instead of annotating from scratch. "
    ]
   },
   {
@@ -567,6 +347,32 @@
    "source": [
     "# Besides Argilla, it can also be imported with load_dataset from datasets\n",
     "dataset_hf = rg.FeedbackDataset.from_huggingface(\"argilla/emotion\", split=\"train[1:101]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9286b053",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FeedbackDataset(\n",
+       "   fields=[TextField(name='text', title='Text', required=True, type=<FieldTypes.text: 'text'>, use_markdown=False)]\n",
+       "   questions=[LabelQuestion(name='label', title='Label', description=None, required=True, type=<QuestionTypes.label_selection: 'label_selection'>, labels={'0': 'sadness', '1': 'joy', '2': 'love', '3': 'anger', '4': 'fear', '5': 'surprise'}, visible_labels=6)]\n",
+       "   guidelines=Argilla port of [dair-ai/emotion](https://huggingface.co/datasets/dair-ai/emotion).)\n",
+       "   metadata_properties=[])\n",
+       ")"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_hf"
    ]
   },
   {
